--- a/creator.html
+++ b/creator.html
@@ -8,6 +8,9 @@
 <body class="container">
   <h1>Licensed Music On Blockchain</h1>
   <h2>Creator Console</h2>
+  Account Number: <input type="number" id="account-number">
+  <a href="#" onclick="refreshPage()" class="btn btn-primary">Refresh Page</a>
+  
   <div class="table-responsive">
     <table class="table table-bordered">
       <thead>
