public key support added to contract

--- a/consumer.html
+++ b/consumer.html
@@ -25,6 +25,8 @@
       </tbody>
     </table>
   </div>
+  <input type="number" id="pub-key" placeholder="Your public key">
+  <br>
   <input type="number" id="media-id" placeholder="Media ID to buy">
   <input type="number" id="media-cost" placeholder="Amount to pay">
   <a href="#" onclick="buyMedia()" class="btn btn-primary">Buy Media</a>
