--- a/creator.html
+++ b/creator.html
@@ -10,7 +10,7 @@
   <h2>Creator Console</h2>
   Account Number: <input type="number" id="account-number">
   <a href="#" onclick="refreshPage()" class="btn btn-primary">Refresh Page</a>
-  
+
   <div class="table-responsive">
     <table class="table table-bordered">
       <thead>
@@ -23,6 +23,10 @@
         <tr>
           <td>Media Name</td>
           <td><input type="text" id="media-name"></td>
+        </tr>
+        <tr>
+          <td>Media URL</td>
+          <td><input type="text" id="media-url"></td>
         </tr>
         <tr>
           <td>Price for individual</td>
