--- a/consumer.html
+++ b/consumer.html
@@ -25,7 +25,11 @@
       </tbody>
     </table>
   </div>
-  <input type="number" id="pub-key" placeholder="Your public key">
+  <label for="pub-key">Public Key</label><br/>
+  <textarea id="pub-key" rows="8" cols="65">-----BEGIN PUBLIC KEY-----
+...
+-----END PUBLIC KEY-----</textarea><br/>
+
   <br>
   <input type="number" id="media-id" placeholder="Media ID to buy">
   <input type="number" id="media-cost" placeholder="Amount to pay">
@@ -38,15 +42,23 @@
         <tr>
           <th>Media ID</th>
           <th>Media Name</th>
-          <th>URL</th>
+          <th>Encrypted URL</th>
+          <th>Decrypted URL</th>
         </tr>
       </thead>
       <tbody id="pur-table-body">
       </tbody>
     </table>
   </div>
+
+  <label for="priv-key">Private Key</label><br/>
+  <textarea id="priv-key" rows="8" cols="65">-----BEGIN RSA PRIVATE KEY-----
+...
+-----END RSA PRIVATE KEY-----</textarea>  
+
 </body>
 <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
+<script src="bin/jsencrypt.min.js"></script>
 <script src="./consumer.js"></script>
 </html>
