Modified UI to mention ether

--- a/consumer.html
+++ b/consumer.html
@@ -31,8 +31,8 @@
 -----END PUBLIC KEY-----</textarea><br/>
 
   <br>
-  <input type="number" id="media-id" placeholder="Media ID to buy">
-  <input type="number" id="media-cost" placeholder="Amount to pay">
+  <input type="number" id="media-id" placeholder="Media ID to buy"><br>
+  <input type="number" id="media-cost" placeholder="Amount to pay">*10<sup>-18</sup> Eth
   <a href="#" onclick="buyMedia()" class="btn btn-primary">Buy Media</a>
 
   <h3>Purchased Media</h3>
