--- a/creator.html
+++ b/creator.html
@@ -51,6 +51,7 @@
 </body>
 <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
-<script src="bin/jsencrypt.min.js"></script>
+<!-- <script src="bin/jsencrypt.min.js"></script> -->
 <script src="./creator.js"></script>
+<script src="./encrypt.js"></script>
 </html>
