--- a/creator.html
+++ b/creator.html
@@ -48,6 +48,7 @@
     </table>
   </div>
   <a href="#" onclick="publishMedia()" class="btn btn-primary">Publish Media</a>
+  <div id="success-msg"></div>
 </body>
 <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
