Changed UI to pay in ether

--- a/consumer.html
+++ b/consumer.html
@@ -33,7 +33,7 @@
 
   <br>
   <input type="number" id="media-id" placeholder="Media ID to buy"><br>
-  <input type="number" id="media-cost" placeholder="Amount to pay">*10<sup>-18</sup> Eth
+  <input type="number" id="media-cost" placeholder="Amount to pay"> Eth
   <a href="#" onclick="buyMedia()" class="btn btn-primary">Buy Media</a>
 
   <h3>Purchased Media</h3>
