--- a/creator.html
+++ b/creator.html
@@ -30,7 +30,7 @@
         </tr>
         <tr>
           <td>Price for individual</td>
-          <td><input type="number" id="price-ind">*10<sup>-18</sup> Eth</td>
+          <td><input type="number" id="price-ind"> Eth</td>
         </tr>
         <tr>
           <td>Price for company</td>
